build: improve scripts Typescript setup & moar (#608)
* build: improve scripts Typescript setup & moar

* ci: generate mock data for scripts tsc step too

--- a/.ci/Makefile
+++ b/.ci/Makefile
@@ -5,13 +5,16 @@ build: prebuild
 	cd .. && pnpm run build
 
 prebuild:
-	cd .. && pnpm run generate
+	cd .. && pnpm run scripts:all
+
+mock-data:
+	cd .. && mkdir -p data/generated && echo '{}' > data/generated/misc-images.json
 
 install:
 	# Despite it's enabled by default on CI. This allows to mock CI locally
 	# https://pnpm.io/cli/install#--frozen-lockfile
 	pnpm install --frozen-lockfile
 
-test:
-	pnpm run test --browsers=ChromeHeadless \
+unit-test:
+	pnpm run test:unit --browsers=ChromeHeadless \
 		--no-watch --no-progress --reporters progress --code-coverage
