build: generate breakpoints at prebuild time (#610)
* build: generate breakpoints at prebuild time

* test: fix ngsrcset missing error

* fix: sizes for project detail page sliders

* refactor: source sizes -> source size list

* fix: project detail half swiper sizes

* refactor: refer to project detail constants to be in sync

* chore: comment about logo TODO

* build: remove non-existent dirs from scripts tsconfig

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -16,10 +16,9 @@
   "include": [
     "src/**/*.ts",
     "../src/app/common/*.ts",
-    "../src/app/common/css/**/*.ts",
-    "../src/app/common/html/**/*.ts",
     "../src/app/common/images/**/*.ts",
     "../src/app/projects/project.ts",
+    "../src/app/projects/project-detail-page/project-detail-page-swipers.ts",
     "../data/**/*.json"
   ]
 }
