--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -15,8 +15,12 @@
   },
   "include": [
     "src/**/*.ts",
-    "../src/app/common/*.ts",
-    "../src/app/common/images/**/*.ts",
+    "../src/app/common/breakpoints.ts",
+    "../src/app/common/directories.ts",
+    "../src/app/common/social.ts",
+    "../src/app/common/images/cdn/**/*.ts",
+    "../src/app/common/images/image.ts",
+    "../src/app/common/images/misc-images.ts",
     "../src/app/projects/project.ts",
     "../src/app/projects/project-detail-page/project-detail-page-swipers.ts",
     "../data/**/*.json"
