--- a/.github/workflows/reusable-performance.yml
+++ b/.github/workflows/reusable-performance.yml
@@ -25,4 +25,4 @@ jobs:
           # Needed for status checks to appear on PR
           # https://github.com/GoogleChrome/lighthouse-ci/issues/859#issuecomment-1574205125
           LHCI_BUILD_CONTEXT__CURRENT_HASH: ${{ github.event.pull_request.head.sha || github.sha }}
-        run: pnpm run test:lighthouse
+        run: pnpm run test:app:lighthouse
