--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "pnpm run /test:*./",
-    "test:unit": "ng test",
-    "test:scripts-tsc": "tsc -b scripts",
-    "test:lighthouse": "lhci autorun",
+    "test:app:unit": "ng test --no-watch",
+    "test:app:lighthouse": "lhci autorun",
+    "test:scripts:tsc": "tsc -b scripts",
+    "test:scripts:unit": "tsx --test 'scripts/**/*.test.ts'",
+    "snapshots:scripts:update": "pnpm run test:scripts:unit --test-update-snapshots",
     "lint": "ng lint",
     "format:check": "prettier --check",
     "format:check:all": "pnpm run format:check -- .",
