--- a/angular.json
+++ b/angular.json
@@ -59,10 +59,8 @@
             "scripts": [],
             "browser": "src/main.ts",
             "server": "src/main.server.ts",
-            "prerender": {
-              "routesFile": "routes-file.txt"
-            },
-            "ssr": false
+            "ssr": false,
+            "outputMode": "static"
           },
           "configurations": {
             "production": {
