perf: use Swiper.js core instead of element

--- a/angular.json
+++ b/angular.json
@@ -48,14 +48,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/sass"]
             },
-            "styles": [
-              "src/styles.scss",
-              {
-                "input": "src/swiper.scss",
-                "inject": false,
-                "bundleName": "swiper"
-              }
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": [],
             "browser": "src/main.ts",
             "server": "src/main.server.ts",
@@ -73,7 +66,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumError": "14kb"
                 }
               ],
               "outputHashing": "all"
@@ -119,14 +112,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/sass"]
             },
-            "styles": [
-              "src/styles.scss",
-              {
-                "input": "src/swiper.scss",
-                "inject": false,
-                "bundleName": "swiper"
-              }
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
