build: remove dotenv dep

--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "format:check:all": "pnpm run format:check -- .",
     "format": "prettier --ignore-unknown --write",
     "format:all": "pnpm run format -- .",
-    "create-env-from-sample": "cp .env.sample .env",
     "lint-staged": "lint-staged",
     "git-hooks": "husky",
     "cms-server": "npx decap-server",
     "analyze-main-bundle": "ng build --source-map && npx source-map-explorer dist/chrislb/browser/main.*.js",
-    "scripts:all": "tsx scripts/src/all.ts",
-    "scripts:misc-images": "tsx scripts/src/misc-images.ts",
-    "scripts:projects-content": "tsx scripts/src/projects-content.ts",
+    "scripts:run": "touch .env && tsx --env-file=.env",
+    "scripts:all": "pnpm scripts:run scripts/src/all.ts",
+    "scripts:misc-images": "pnpm scripts:run scripts/src/misc-images.ts",
+    "scripts:projects-content": "pnpm scripts:run scripts/src/projects-content.ts",
     "validate-renovate-config": "npx -p renovate renovate-config-validator"
   },
   "dependencies": {
@@ -69,7 +69,6 @@
     "@types/node": "22.13.14",
     "angular-eslint": "19.3.0",
     "cloudinary": "2.6.0",
-    "dotenv": "16.4.7",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
     "husky": "9.1.7",
