--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "validate-renovate-config": "npx -p renovate renovate-config-validator"
   },
   "dependencies": {
-    "@angular/animations": "19.2.14",
-    "@angular/common": "19.2.14",
-    "@angular/compiler": "19.2.14",
-    "@angular/core": "19.2.14",
-    "@angular/forms": "19.2.14",
-    "@angular/platform-browser": "19.2.14",
-    "@angular/platform-browser-dynamic": "19.2.14",
-    "@angular/platform-server": "19.2.14",
-    "@angular/router": "19.2.14",
-    "@angular/ssr": "19.2.15",
+    "@angular/animations": "20.0.6",
+    "@angular/common": "20.0.6",
+    "@angular/compiler": "20.0.6",
+    "@angular/core": "20.0.6",
+    "@angular/forms": "20.0.6",
+    "@angular/platform-browser": "20.0.6",
+    "@angular/platform-browser-dynamic": "20.0.6",
+    "@angular/platform-server": "20.0.6",
+    "@angular/router": "20.0.6",
+    "@angular/ssr": "20.0.5",
     "@davidlj95/ngx-meta": "20.0.0",
     "@fontsource/fira-sans": "5.2.6",
     "@fortawesome/angular-fontawesome": "1.0.0",
@@ -57,16 +57,16 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.15",
-    "@angular/cli": "19.2.15",
-    "@angular/compiler-cli": "19.2.14",
+    "@angular/build": "^20.0.5",
+    "@angular/cli": "20.0.5",
+    "@angular/compiler-cli": "20.0.6",
     "@eslint/compat": "1.3.1",
     "@lhci/cli": "0.15.1",
     "@types/compression": "1.8.1",
     "@types/express": "5.0.3",
     "@types/jasmine": "5.1.8",
     "@types/node": "22.16.0",
-    "angular-eslint": "19.8.1",
+    "angular-eslint": "20.1.1",
     "cloudinary": "2.7.0",
     "eslint": "9.30.1",
     "eslint-config-prettier": "10.1.5",
