--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.5",
+    "@angular/build": "20.0.5",
     "@angular/cli": "20.0.5",
     "@angular/compiler-cli": "20.0.6",
     "@eslint/compat": "1.3.1",
